helm/headlamp/extra/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: headlamp
  name: headlamp-auth
spec:
  basicAuth:
    secret: headlamp-auth-secret
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: headlamp
  name: headlamp-dashboard-ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`headlamp.kalexlab.xyz`)
      services:
        - name: headlamp
          port: 80
      middlewares:
        - name: headlamp-dashboard-auth
  tls:
    secretName: headlamp-ingress-certificate-secret
